2003-06-24 01:05  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTabViewItem.m (-drawLabel:inRect:): Update for change
	in the behavior of -drawAtPoint:. Use -drawInRect: instead.

2003-06-23 19:03  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSStringDrawing.m (-drawAtPoint:): Place the text correctly
	when the view isn't flipped.

2003-06-23  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPanel.m
	Commented out unused variables WTitleHeight, ScrollMinSize,
	MessageMinHeight. 
	* Source/NSTabView.m (selectNextTabViewItem:):
	* Source/NSTableView.m (selectAll:):
	* Source/NSTextStorage.m (edited:range:changeInLength:,
	processEditing):
	* Source/GSTextStorage.m (replaceCharactersInRange:withString:)
	* Source/tiff.m (NSTIFFRead, NSTIFFWrite, CheckAndCorrectColormap):
	* Source/GSTable.m (_updateForNewFrameSize:)
	* Source/NSTextView.m (changeFont:):
	Removed compiler warning about signed/unsigned comparision. 
	* Source/GSHorizontalTypesetter.m
	Changed element char_index of structure glyph_cache_t to unsigned.

2003-06-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWorkspace.m: Implement autolaunch flag and add
	documentation describing hwo GNUstep and MacOS-X actually
	handle launching ... hopefully more clearly than the
	somewhat misleading MacOS-X documentation.

2003-06-22  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gnustep/gui/NSInputManager.h
	Changed ivar _abortFlags to unsigned. Changed all modifier
	parameters to unsigned.
	* Source/NSInputManager.m (initWithName:host:):
	Removed compiler warning about signed/unsigned comparision. 
	Adopted to changes in header.
	* Headers/gnustep/gui/GSLayoutManager.h
	Changed ivars layout_glyph and layout_char to unsigned.
	* Headers/gnustep/gui/GSLayoutManager_internal.h
	Changed elements glyph_length and char_length of structure
	glyph_run_head_t to unsigned.
	* Source/NSLayoutManager.m
	(rectArrayForGlyphRange:...rectCount:,
	glyphRangeForBoundingRect:inTextContainer:,